--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: testingbags
-version: 1-3
+version: 1-4
 runtime: python27
 api_version: 1
 threadsafe: yes
@@ -22,6 +22,12 @@ handlers:
 
 - url: /static
   static_dir: static
+  
+- url: /admin/createIDTQ
+  script: main.app
+  secure: always
+  login: admin
+
   
 - url: .*
   script: main.app
